--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.21.5",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
