--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
